Timed delete confirmation

--- a/popup.css
+++ b/popup.css
@@ -82,13 +82,16 @@ a {
     color: blueviolet;
 }
 
-.deleteButton:disabled,
-.deleteButton[disabled]{
+.confirmDeleteButton:disabled,
+.confirmDeleteButton[disabled]{
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
 }
 
+.confirmDeleteButton {
+    width: 62px;
+}
 
 /* Tooltips */
 
